SF Primes/src/objects/MSR_Demos__c.object
<CustomObject>
    <description>Specific attributes of each demo by Solution Consultant for a customer</description>
    <fields>
        <fullName>ASP_webBox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ASP webBox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <description>Account the Opportunity is on</description>
        <formula>Opportunity__r.Account.Name</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accounting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accounting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Add_On__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add On</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Comments__c</fullName>
        <label>Additional Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Details_comments_suggestions__c</fullName>
        <label>Additional Details,comments,suggestions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Airfare__c</fullName>
        <description>Solution Consultant Presentaion expenses</description>
        <inlineHelpText>Enter dollar values only, no cents. Any cents entered will be lost when the record is saved.</inlineHelpText>
        <label>Airfare</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Any_technical_issues_during_presentation__c</fullName>
        <inlineHelpText>Did you have any technical issues during the presentation?</inlineHelpText>
        <label>Any technical issues during presentation</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - if Yes please provide additional comments</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CB_SLS_Created_frm_Chatter_Action_Hidden__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hidden field that is set by the Chatter Action on the Opportunity Object</description>
        <label>Created from Chatter Action_Hidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CRM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cancelled_Reason__c</fullName>
        <inlineHelpText>If the status of Cancelled is chosen please explain why.</inlineHelpText>
        <label>Cancelled Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Car_Rental__c</fullName>
        <description>Solution Consultant Presentation expenses</description>
        <inlineHelpText>Enter dollar values only, no cents. Any cents entered will be lost when the record is saved.</inlineHelpText>
        <label>Transportation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Communicated_products_features_benefits__c</fullName>
        <inlineHelpText>Ability to communicate CDK&apos;s product&apos;s feature and benefits in a clear manner?</inlineHelpText>
        <label>Communicated products/features/benefits</label>
        <picklist>
            <picklistValues>
                <fullName>Extremely Effective</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Effective</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Effective</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Somewhat Effective</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs Improvement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Credit_Compliance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credit &amp; Compliance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Touch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Touch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DASH_CRM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DASH CRM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMS_Version__c</fullName>
        <label>DMS Version</label>
        <picklist>
            <picklistValues>
                <fullName>Dash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drive XL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heavy Equpment</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dash__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dash</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date1__c</fullName>
        <label>Date Demo Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Demo_Requested__c</fullName>
        <label>Date Demo Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date Demo is Performed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dealership_Name__c</fullName>
        <description>Question 3 from Survey</description>
        <label>Dealership Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Demo_Location__c</fullName>
        <label>Demo Location</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Desking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Desking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dig_Cont__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dig. Cont.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Digital_SI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Digital</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Digital__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Digital</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discovery_Received__c</fullName>
        <label>Discovery Received</label>
        <picklist>
            <picklistValues>
                <fullName>No Discovery Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesperson Emailed Basic Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minimum Discovery Document received via email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Demo Conference Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Demo Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Drive1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Drive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Drive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Drive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Effectiveness_for_sales_cycle__c</fullName>
        <inlineHelpText>Overall effectiveness of this presentation in moving you forward in the sales cycle?</inlineHelpText>
        <label>Effectiveness for sales cycle?</label>
        <picklist>
            <picklistValues>
                <fullName>Overall effectiveness of this presentation in moving you forward in the sales cycle?</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expected_Duration__c</fullName>
        <label>Expected Duration</label>
        <picklist>
            <picklistValues>
                <fullName>30 min</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 hr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.5 hr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 hr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 hr</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FMLR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FMLR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>F_I_Menu__c</fullName>
        <defaultValue>false</defaultValue>
        <label>F&amp;I Menu</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ford_Smartt_ePayments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ford Smartt ePayments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Front_End_Inventory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Front End &amp; Inventory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Front_End_Sales__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Front End Sales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Front_End__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Front End</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GM_OSS_ePayments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GM OSS ePayments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gas__c</fullName>
        <description>Solution Consultant Presentation expenses</description>
        <inlineHelpText>Enter dollar values only, no cents. Any cents entered will be lost when the record is saved.</inlineHelpText>
        <label>Mileage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hotel__c</fullName>
        <description>Solution Consultant Presentation expenses</description>
        <inlineHelpText>Enter dollar values only, no cents. Any cents entered will be lost when the record is saved.</inlineHelpText>
        <label>Hotel</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Inactive_Demo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive Demo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inventory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inventory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lease_Management__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lease Management</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lot_Management_Date__c</fullName>
        <label>Lot Management Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lot_Management__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lot Management</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MSR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SC</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only SCs can be selected!</errorMessage>
            <filterItems>
                <field>User.Title</field>
                <operation>contains</operation>
                <value>SC</value>
            </filterItems>
            <infoMessage>Please select a SC.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N40000001lfoYEAQ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Meals__c</fullName>
        <description>Solution Consultant Presentation expenses</description>
        <inlineHelpText>Enter dollar values only, no cents. Any cents entered will be lost when the record is saved.</inlineHelpText>
        <label>Meals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Menu__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Menu</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NVoicePay1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NVoicePay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NVoice_Pay__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NVoice Pay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes_Additional_Comments__c</fullName>
        <label>Notes/Additional Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>One_Eighty_Corp_180__c</fullName>
        <defaultValue>false</defaultValue>
        <label>One Eighty Corp (180)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_Email_Hidden__c</fullName>
        <label>Opportunity Owner Email - Hidden</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_Field__c</fullName>
        <label>Opportunity Owner Field</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <formula>Opportunity__c</formula>
        <label>Opportunity Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>R00N40000001lfn9EAA</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Overall_presentation_skills__c</fullName>
        <label>Overall presentation skills?</label>
        <picklist>
            <picklistValues>
                <fullName>Extremely Effective</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Effective</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Effective</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Somewhat Effective</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs Improvement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PSG__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PSG</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Parts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payroll_Plus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Payroll Plus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payroll__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Payroll</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Phone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Presentation_Date_Survey__c</fullName>
        <label>Presentation Date - Survey</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Presentation_Date__c</fullName>
        <description>Survey Question 4</description>
        <label>Presentation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Professionalism_in_front_of_client__c</fullName>
        <label>Professionalism in front of client?</label>
        <picklist>
            <picklistValues>
                <fullName>Extremely Effective</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Effective</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Effective</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Somewhat Effective</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs Improvement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Professionalism_with_Sales_Department__c</fullName>
        <label>Professionalism with Sales Department?</label>
        <picklist>
            <picklistValues>
                <fullName>Extremely Effective</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Effective</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Effective</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Somewhat Effective</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs Improvement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region_Survey__c</fullName>
        <label>Region_Survey</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Question 2 from Survey</description>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hoffman Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PFW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Truck</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Remote_Present__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remote Present</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SC_Assigned__c</fullName>
        <label>SC Assigned</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SC_Manager_Email_Hidden__c</fullName>
        <label>SC Manager Email - Hidden</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SC_Manager_Field__c</fullName>
        <label>SC Manager Field</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SC_Presentation_Duration__c</fullName>
        <label>SC Presentation Duration</label>
        <picklist>
            <picklistValues>
                <fullName>Under 30 mins</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30-60 mins</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-2 hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-3 hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-4 hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4-6 hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6-8 hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8+ hours</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SLX_OppMSRDemo_CreateDate__c</fullName>
        <label>SLX OppMSRDemo CreateDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLX_OppMSRDemo_ID__c</fullName>
        <label>SLX OppMSRDemo ID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceEdge_Date__c</fullName>
        <label>ServiceEdge Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ServiceEdge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ServiceEdge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Edge_ePayments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Service Edge &amp; ePayments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Should_survey_be_sent__c</fullName>
        <label>Should survey be sent?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Show_Demo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Demo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Solution_Consultant1__c</fullName>
        <label>Solution Consultant - Survey</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solution_Consultant__c</fullName>
        <description>Question 6</description>
        <label>Solution Consultant</label>
        <picklist>
            <picklistValues>
                <fullName>Nancy Benz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bob Frolund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Linda Greer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debi Kight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dennis Maurer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ted Moore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lori Nieman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Claude Polese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kyle Rauzi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kathy Strolla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tania Udink</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tom Blakely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kay Gavin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Steve Hendra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>John Knight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jim Meagher</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lori Neuhauser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Darren Ochs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tammy Powers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ted Stehr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greg Sweich</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jessica Urbani</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mark Corsi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debbie Goemmer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corey Henry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patti Krueger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denise Meyer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nadia Nevski</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greg Petrack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mark Randall</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending Solution Consultant Assignment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assigned Solution Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Survey_Completed_Date_and_Time__c</fullName>
        <label>Survey Completed Date and Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Survey_Filled_out_by__c</fullName>
        <description>Question 1 from Survey</description>
        <label>Survey Filled out by</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Sent_Date__c</fullName>
        <label>Survey Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Survey_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Survey Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tech_Refresh__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tech Refresh</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TimeZone__c</fullName>
        <label>TimeZone</label>
        <picklist>
            <picklistValues>
                <fullName>Pacific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East Coast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caribbean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mountain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawaii</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Time_Requested__c</fullName>
        <label>Time Requested</label>
        <picklist>
            <picklistValues>
                <fullName>Anytime AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anytime PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:15AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:30AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:45AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:15AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:45AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:15AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:45AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:15PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:45PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:00PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:15PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:30PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:45PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:00PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:15PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:30PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:45PM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Demo__c</fullName>
        <label>Type of Demo</label>
        <picklist>
            <picklistValues>
                <fullName>Onsite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remote</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unhook__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unhook</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unified_Communications__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unified Communications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_Group_Expo_Show__c</fullName>
        <defaultValue>false</defaultValue>
        <label>User Group/Expo/Show</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Utilization_Installation_Follow_up__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Utilization/Installation Follow-up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VIP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VIP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VSS_Remote__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VSS Remote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vehicle_Exchange__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vehicle Exchange</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>